--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                         <a href="#service" class="nav-item nav-link">Compétences</a>
                         <a href="#experience" class="nav-item nav-link">Experiences</a>
                         <a href="#portfolio" class="nav-item nav-link">Portfolio</a>
+                        <a href="./e4.html" class="nav-item nav-link">Synthese E4</a>
                     </div>
                 </div>
             </div>
