--- a/e4.html
+++ b/e4.html
@@ -86,27 +86,27 @@
                                 </th>
                                 <th scope="col">Date</th>
                                 <th scope="col">
-                                    <a data-toggle="modal" data-target="#patrimoine" class="logo_e4"><img src="./img/circle.svg"/></a>
+                                    <a data-toggle="modal" data-target="#patrimoine" class="logo_e4"><img src="./img/circle.svg" /></a>
                                     Patrimoine
                                 </th>
-                                <th scope="col">                                    
-                                    <img src="./img/square.svg"/>
+                                <th scope="col">
+                                    <a data-toggle="modal" data-target="#incidents" class="logo_e4"><img src="./img/square.svg" /></a>                                    
                                     Incidents / Demandes
                                 </th>
-                                <th scope="col">                                    
-                                    <img src="./img/heart.svg"/>
+                                <th scope="col">
+                                    <a data-toggle="modal" data-target="#presence" class="logo_e4"><img src="./img/heart.svg" /></a>                                        
                                     Présence
                                 </th>
                                 <th scope="col">
-                                    <img src="./img/star.svg"/>
+                                    <a data-toggle="modal" data-target="#projet" class="logo_e4"><img src="./img/star.svg" /></a>                                        
                                     Projet
                                 </th>
                                 <th scope="col">
-                                    <img src="./img/triangle.svg"/>
+                                    <a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/triangle.svg" /></a>                                        
                                     Service
                                 </th>
                                 <th scope="col">
-                                    <img src="./img/diamond.svg"/>
+                                    <a data-toggle="modal" data-target="#developpement" class="logo_e4"><img src="./img/diamond.svg" /></a>   
                                     Développement
                                 </th>
                               </tr>
@@ -116,8 +116,41 @@
                                     <td colspan="8" style="background-color: #EF2D40; color: white; font-weight: bold; text-align: center;">Réalisation en cours de formations</td>
                                 </tr>
                               <tr>
+                                <th scope="row">Déploiement d'un site web sur OVH</th>
+                                <td>Du 03/01/23 au 02/02/23</td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/triangle.svg" /></a></td>
+                                <td></td>
+                              </tr>
+                              <tr>
+                                <th scope="row">Création d'une documentation du site et de sa fonctionnalité de création de devis</th>
+                                <td>Du 03/01/23 au 02/02/23</td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/triangle.svg" /></a></td>
+                                <td></td>
+                              </tr>
+                              <tr>
+                                <th scope="row">Création de Test Unitaire de l'UI et des fonction serveurs</th>
+                                <td>Du 03/01/23 au 02/02/23</td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/triangle.svg" /></a></td>
+                                <td></td>
+                              </tr>
+                              <tr>
+                                <td colspan="8" style="background-color: #EF2D40; color: white; font-weight: bold; text-align: center;">Réalisations en milieu professionnel en cours de Première Année</td>
+                              </tr>
+                              <tr>
                                 <th scope="row">1</th>
-                                <td>Mark</td>
+                                <td>12/11/2002</td>
                                 <td>Otto</td>
                                 <td>@mdo</td>
                                 <td>Otto</td>
@@ -127,7 +160,7 @@
                               </tr>
                               <tr>
                                 <th scope="row">2</th>
-                                <td>Jacob</td>
+                                <td>12/11/2002</td>
                                 <td>Thornton</td>
                                 <td>@fat</td>
                                 <td>Jacob</td>
@@ -137,7 +170,7 @@
                               </tr>
                               <tr>
                                 <th scope="row">3</th>
-                                <td>Jacob</td>
+                                <td>12/11/2002</td>
                                 <td>Thornton</td>
                                 <td>@fat</td>
                                 <td>Jacob</td>
@@ -146,11 +179,11 @@
                                 <td>@fat</td>
                               </tr>
                               <tr>
-                                <td colspan="8" style="background-color: #EF2D40; color: white; font-weight: bold; text-align: center;">Réalisation en cours de formations</td>
+                                <td colspan="8" style="background-color: #EF2D40; color: white; font-weight: bold; text-align: center;">Réalisations en milieu professionnel en cours de Seconde Année</td>
                               </tr>
                               <tr>
                                 <th scope="row">1</th>
-                                <td>Mark</td>
+                                <td>12/11/2002</td>
                                 <td>Otto</td>
                                 <td>@mdo</td>
                                 <td>Otto</td>
@@ -160,7 +193,7 @@
                               </tr>
                               <tr>
                                 <th scope="row">2</th>
-                                <td>Jacob</td>
+                                <td>12/11/2002</td>
                                 <td>Thornton</td>
                                 <td>@fat</td>
                                 <td>Jacob</td>
@@ -170,40 +203,7 @@
                               </tr>
                               <tr>
                                 <th scope="row">3</th>
-                                <td>Jacob</td>
-                                <td>Thornton</td>
-                                <td>@fat</td>
-                                <td>Jacob</td>
-                                <td>Thornton</td>
-                                <td>@fat</td>
-                                <td>@fat</td>
-                              </tr>
-                              <tr>
-                                <td colspan="8" style="background-color: #EF2D40; color: white; font-weight: bold; text-align: center;">Réalisation en cours de formations</td>
-                              </tr>
-                              <tr>
-                                <th scope="row">1</th>
-                                <td>Mark</td>
-                                <td>Otto</td>
-                                <td>@mdo</td>
-                                <td>Otto</td>
-                                <td>@mdo</td>
-                                <td>Otto</td>
-                                <td>@mdo</td>
-                              </tr>
-                              <tr>
-                                <th scope="row">2</th>
-                                <td>Jacob</td>
-                                <td>Thornton</td>
-                                <td>@fat</td>
-                                <td>Jacob</td>
-                                <td>Thornton</td>
-                                <td>@fat</td>
-                                <td>@fat</td>
-                              </tr>
-                              <tr>
-                                <th scope="row">3</th>
-                                <td>Jacob</td>
+                                <td>12/11/2002</td>
                                 <td>Thornton</td>
                                 <td>@fat</td>
                                 <td>Jacob</td>
@@ -255,12 +255,9 @@
                 </div>
                 <div class="modal-body">
                     <ul>
-                        <li>Recenser et identifier les ressources numériques </li>
-                        <li>Exploiter des référentiels, normes et standards adoptés par le prestataire informatique</li>
-                        <li>Mettre en place et vérifier les niveaux d’habilitation associés à un service</li>
-                        <li>Vérifier les conditions de la continuité d’un service informatique</li>
-                        <li>Gérer des sauvegardes</li>
-                        <li>Vérifier le respect des règles d’utilisation des ressources numériques</li>
+                        <li>Collecter, suivre et orienter des demandes</li>
+                        <li>Traiter des demandes concernant les services réseau et système, applicatifs</li>
+                        <li>Traiter des demandes concernant les applications</li>
                     </ul>
                 </div>
                 <div class="modal-footer">
@@ -281,12 +278,9 @@
                 </div>
                 <div class="modal-body">
                     <ul>
-                        <li>Recenser et identifier les ressources numériques </li>
-                        <li>Exploiter des référentiels, normes et standards adoptés par le prestataire informatique</li>
-                        <li>Mettre en place et vérifier les niveaux d’habilitation associés à un service</li>
-                        <li>Vérifier les conditions de la continuité d’un service informatique</li>
-                        <li>Gérer des sauvegardes</li>
-                        <li>Vérifier le respect des règles d’utilisation des ressources numériques</li>
+                        <li>Participer à la valorisation de l’image de l’organisation sur les médias numériques en tenant compte du cadre juridique et des enjeux économiques</li>
+                        <li>Référencer les services en ligne de l’organisation et mesurer leur visibilité.</li>
+                        <li>Participer à l’évolution d’un site Web exploitant les données de l’organisation.</li>
                     </ul>
                 </div>
                 <div class="modal-footer">
@@ -307,12 +301,9 @@
                 </div>
                 <div class="modal-body">
                     <ul>
-                        <li>Recenser et identifier les ressources numériques </li>
-                        <li>Exploiter des référentiels, normes et standards adoptés par le prestataire informatique</li>
-                        <li>Mettre en place et vérifier les niveaux d’habilitation associés à un service</li>
-                        <li>Vérifier les conditions de la continuité d’un service informatique</li>
-                        <li>Gérer des sauvegardes</li>
-                        <li>Vérifier le respect des règles d’utilisation des ressources numériques</li>
+                        <li>Analyser les objectifs et les modalités d’organisation d’un projet</li>
+                        <li>Planifier les activités</li>
+                        <li>Évaluer les indicateurs de suivi d’un projet et analyser les écarts</li>
                     </ul>
                 </div>
                 <div class="modal-footer">
@@ -322,7 +313,7 @@
             </div>
         </div>
 
-        <div class="modal fade" id="service" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal fade" id="services" tabindex="-1" role="dialog" aria-labelledby="" aria-hidden="true">
             <div class="modal-dialog modal_e4" role="document">
               <div class="modal-content">
                 <div class="modal-header">
@@ -333,12 +324,9 @@
                 </div>
                 <div class="modal-body">
                     <ul>
-                        <li>Recenser et identifier les ressources numériques </li>
-                        <li>Exploiter des référentiels, normes et standards adoptés par le prestataire informatique</li>
-                        <li>Mettre en place et vérifier les niveaux d’habilitation associés à un service</li>
-                        <li>Vérifier les conditions de la continuité d’un service informatique</li>
-                        <li>Gérer des sauvegardes</li>
-                        <li>Vérifier le respect des règles d’utilisation des ressources numériques</li>
+                        <li>Réaliser les tests d’intégration et d’acceptation d’un service</li>
+                        <li>Déployer un service</li>
+                        <li>Accompagner les utilisateurs dans la mise en place d’un service</li>
                     </ul>
                 </div>
                 <div class="modal-footer">
@@ -359,12 +347,10 @@
                 </div>
                 <div class="modal-body">
                     <ul>
-                        <li>Recenser et identifier les ressources numériques </li>
-                        <li>Exploiter des référentiels, normes et standards adoptés par le prestataire informatique</li>
-                        <li>Mettre en place et vérifier les niveaux d’habilitation associés à un service</li>
-                        <li>Vérifier les conditions de la continuité d’un service informatique</li>
-                        <li>Gérer des sauvegardes</li>
-                        <li>Vérifier le respect des règles d’utilisation des ressources numériques</li>
+                        <li>Mettre en place son environnement d’apprentissage personnel</li>
+                        <li>Mettre en œuvre des outils et stratégies de veille informationnelle</li>
+                        <li>Gérer son identité professionnelle</li>
+                        <li>Développer son projet professionnel</li>
                     </ul>
                 </div>
                 <div class="modal-footer">
