[+] added all e4 skills

--- a/e4.html
+++ b/e4.html
@@ -78,35 +78,41 @@
                 </div>
                 <div class="row">
                     <div class="col-12">
-                        <table class="table">
+                        <table class="table" width="100%">
                             <thead>
                               <tr>
                                 <th scope="col">
                                     Compétences
                                 </th>
                                 <th scope="col">Date</th>
-                                <th scope="col">
+                                <th scope="col" class="e4_table_icon_box">
                                     <a data-toggle="modal" data-target="#patrimoine" class="logo_e4"><img src="./img/circle.svg" /></a>
+                                    <br>
                                     Patrimoine
                                 </th>
-                                <th scope="col">
-                                    <a data-toggle="modal" data-target="#incidents" class="logo_e4"><img src="./img/square.svg" /></a>                                    
+                                <th scope="col" class="e4_table_icon_box">
+                                    <a data-toggle="modal" data-target="#incidents" class="logo_e4"><img src="./img/square.svg" /></a>   
+                                    <br>                                
                                     Incidents / Demandes
                                 </th>
-                                <th scope="col">
-                                    <a data-toggle="modal" data-target="#presence" class="logo_e4"><img src="./img/heart.svg" /></a>                                        
+                                <th scope="col" class="e4_table_icon_box">
+                                    <a data-toggle="modal" data-target="#presence" class="logo_e4"><img src="./img/heart.svg" /></a>    
+                                    <br>                                    
                                     Présence
                                 </th>
-                                <th scope="col">
-                                    <a data-toggle="modal" data-target="#projet" class="logo_e4"><img src="./img/star.svg" /></a>                                        
+                                <th scope="col" class="e4_table_icon_box">
+                                    <a data-toggle="modal" data-target="#projet" class="logo_e4"><img src="./img/star.svg" /></a>        
+                                    <br>                                
                                     Projet
                                 </th>
-                                <th scope="col">
-                                    <a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/triangle.svg" /></a>                                        
+                                <th scope="col" class="e4_table_icon_box">
+                                    <a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/triangle.svg" /></a>    
+                                    <br>                                    
                                     Service
                                 </th>
-                                <th scope="col">
+                                <th scope="col" class="e4_table_icon_box">
                                     <a data-toggle="modal" data-target="#developpement" class="logo_e4"><img src="./img/diamond.svg" /></a>   
+                                    <br>
                                     Développement
                                 </th>
                               </tr>
@@ -115,24 +121,120 @@
                                 <tr>
                                     <td colspan="8" style="background-color: #EF2D40; color: white; font-weight: bold; text-align: center;">Réalisation en cours de formations</td>
                                 </tr>
+                                <tr>
+                                  <th scope="row">Création d'un Active Directory sous windows server 2016</th>
+                                  <td>12/11/2002</td>
+                                  <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/circle.svg" /></a></td>
+                                  <td></td>
+                                  <td></td>
+                                  <td></td>
+                                  <td></td>
+                                  <td></td>
+                                </tr>
+                                <tr>
+                                  <th scope="row">Création d'un serveur de messagerie sécurisé sous Ubuntu avec le client ThunderBird</th>
+                                  <td>12/11/2002</td>
+                                  <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/circle.svg" /></a></td>
+                                  <td></td>
+                                  <td></td>
+                                  <td></td>
+                                  <td></td>
+                                  <td></td>
+                                </tr>
+                                <tr>
+                                  <th scope="row">Mise en place d'une répartition des charges sur serveurs web avec Haproxy</th>
+                                  <td>12/11/2002</td>
+                                  <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/circle.svg" /></a></td>
+                                  <td></td>
+                                  <td></td>
+                                  <td></td>
+                                  <td></td>
+                                  <td></td>
+                                </tr>
+                                <tr>
+                                  <th scope="row">Mise en place de sauvegardes et restauration système sur windows</th>
+                                  <td>12/11/2002</td>
+                                  <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/circle.svg" /></a></td>
+                                  <td></td>
+                                  <td></td>
+                                  <td></td>
+                                  <td></td>
+                                  <td></td>
+                                </tr>
+                              <tr>
+                                <td colspan="8" style="background-color: #EF2D40; color: white; font-weight: bold; text-align: center;">Réalisations en milieu professionnel en cours de Première Année</td>
+                              </tr>
+                              <tr>
+                                <th scope="row">Refonte d'un site web avec Wordpress</th>
+                                <td>12/11/2002</td>
+                                <td></td>
+                                <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/square.svg" /></a></td>
+                                <td></td>
+                                <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/star.svg" /></a></td>
+                                <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/triangle.svg" /></a></td>
+                                <td></td>
+                              </tr>
+                              <tr>
+                                <th scope="row">Mise en place d'une Veille informationnelle sur ReactJs</th>
+                                <td>12/11/2002</td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/diamond.svg" /></a></td>
+                              </tr>
+                              <tr>
+                                <th scope="row">Entretien de mon compte Linkedin et de mes relations</th>
+                                <td>12/11/2002</td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/diamond.svg" /></a></td>
+                              </tr>
+                              <tr>
+                                <th scope="row">Mise en place de mon environnement d'apprentissage par la création de projet personnel</th>
+                                <td>12/11/2002</td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/diamond.svg" /></a></td>
+                              </tr>
+                              <tr>
+                                <th scope="row">Entretien de mon compte Github</th>
+                                <td>12/11/2002</td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/diamond.svg" /></a></td>
+                              </tr>
+                              <tr>
+                                <td colspan="8" style="background-color: #EF2D40; color: white; font-weight: bold; text-align: center;">Réalisations en milieu professionnel en cours de Seconde Année</td>
+                              </tr>
                               <tr>
                                 <th scope="row">Déploiement d'un site web sur OVH</th>
                                 <td>Du 03/01/23 au 02/02/23</td>
                                 <td></td>
+                                <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/square.svg" /></a></td>
+                                <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/heart.svg" /></a></td>
                                 <td></td>
-                                <td></td>
-                                <td></td>
-                                <td><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/triangle.svg" /></a></td>
+                                <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/triangle.svg" /></a></td>
                                 <td></td>
                               </tr>
                               <tr>
                                 <th scope="row">Création d'une documentation du site et de sa fonctionnalité de création de devis</th>
                                 <td>Du 03/01/23 au 02/02/23</td>
                                 <td></td>
+                                <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/square.svg" /></a></td>
                                 <td></td>
                                 <td></td>
-                                <td></td>
-                                <td><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/triangle.svg" /></a></td>
+                                <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/triangle.svg" /></a></td>
                                 <td></td>
                               </tr>
                               <tr>
@@ -142,74 +244,28 @@
                                 <td></td>
                                 <td></td>
                                 <td></td>
-                                <td><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/triangle.svg" /></a></td>
+                                <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/triangle.svg" /></a></td>
                                 <td></td>
                               </tr>
                               <tr>
-                                <td colspan="8" style="background-color: #EF2D40; color: white; font-weight: bold; text-align: center;">Réalisations en milieu professionnel en cours de Première Année</td>
+                                <th scope="row">Refonte d'un site web avec ReactJS et Express (pour presence ajoutez avis google, google adsense et le seo dans le rapport de stage)</th>
+                                <td>Du 03/01/23 au 02/02/23</td>
+                                <td></td>
+                                <td></td>
+                                <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/heart.svg" /></a></td>
+                                <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/star.svg" /></a></td>
+                                <td></td>
+                                <td></td>
                               </tr>
                               <tr>
-                                <th scope="row">1</th>
-                                <td>12/11/2002</td>
-                                <td>Otto</td>
-                                <td>@mdo</td>
-                                <td>Otto</td>
-                                <td>@mdo</td>
-                                <td>Otto</td>
-                                <td>@mdo</td>
-                              </tr>
-                              <tr>
-                                <th scope="row">2</th>
-                                <td>12/11/2002</td>
-                                <td>Thornton</td>
-                                <td>@fat</td>
-                                <td>Jacob</td>
-                                <td>Thornton</td>
-                                <td>@fat</td>
-                                <td>@fat</td>
-                              </tr>
-                              <tr>
-                                <th scope="row">3</th>
-                                <td>12/11/2002</td>
-                                <td>Thornton</td>
-                                <td>@fat</td>
-                                <td>Jacob</td>
-                                <td>Thornton</td>
-                                <td>@fat</td>
-                                <td>@fat</td>
-                              </tr>
-                              <tr>
-                                <td colspan="8" style="background-color: #EF2D40; color: white; font-weight: bold; text-align: center;">Réalisations en milieu professionnel en cours de Seconde Année</td>
-                              </tr>
-                              <tr>
-                                <th scope="row">1</th>
-                                <td>12/11/2002</td>
-                                <td>Otto</td>
-                                <td>@mdo</td>
-                                <td>Otto</td>
-                                <td>@mdo</td>
-                                <td>Otto</td>
-                                <td>@mdo</td>
-                              </tr>
-                              <tr>
-                                <th scope="row">2</th>
-                                <td>12/11/2002</td>
-                                <td>Thornton</td>
-                                <td>@fat</td>
-                                <td>Jacob</td>
-                                <td>Thornton</td>
-                                <td>@fat</td>
-                                <td>@fat</td>
-                              </tr>
-                              <tr>
-                                <th scope="row">3</th>
-                                <td>12/11/2002</td>
-                                <td>Thornton</td>
-                                <td>@fat</td>
-                                <td>Jacob</td>
-                                <td>Thornton</td>
-                                <td>@fat</td>
-                                <td>@fat</td>
+                                <th scope="row">Création d'une API REST</th>
+                                <td>Du 03/01/23 au 02/02/23</td>
+                                <td></td>
+                                <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/square.svg" /></a></td>
+                                <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/heart.svg" /></a></td>
+                                <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/star.svg" /></a></td>
+                                <td></td>
+                                <td></td>
                               </tr>
                             </tbody>
                         </table>
