--- a/e4.html
+++ b/e4.html
@@ -161,6 +161,76 @@
                                   <td></td>
                                   <td></td>
                                 </tr>
+                                <tr>
+                                  <th scope="row">Mise en place d'une Veille informationnelle sur ReactJs</th>
+                                  <td>12/11/2002</td>
+                                  <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/circle.svg" /></a></td>
+                                  <td></td>
+                                  <td></td>
+                                  <td></td>
+                                  <td></td>
+                                  <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/diamond.svg" /></a></td>
+                                </tr>
+                                <tr>
+                                  <th scope="row">Entretien de mon compte Linkedin et de mes relations</th>
+                                  <td>12/11/2002</td>
+                                  <td></td>
+                                  <td></td>
+                                  <td></td>
+                                  <td></td>
+                                  <td></td>
+                                  <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/diamond.svg" /></a></td>
+                                </tr>
+                                <tr>
+                                  <th scope="row">Mise en place de mon environnement d'apprentissage par la création de projet personnel</th>
+                                  <td>12/11/2002</td>
+                                  <td></td>
+                                  <td></td>
+                                  <td></td>
+                                  <td></td>
+                                  <td></td>
+                                  <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/diamond.svg" /></a></td>
+                                </tr>
+                                <tr>
+                                  <th scope="row">Entretien de mon compte Github</th>
+                                  <td>12/11/2002</td>
+                                  <td></td>
+                                  <td></td>
+                                  <td></td>
+                                  <td></td>
+                                  <td></td>
+                                  <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/diamond.svg" /></a></td>
+                                </tr>
+                                <tr>
+                                  <th scope="row">Mise en place de la solution PENC</th>
+                                  <td>12/11/2002</td>
+                                  <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/circle.svg" /></a></td>
+                                  <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/square.svg" /></a></td>
+                                  <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/heart.svg" /></a></td>
+                                  <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/star.svg" /></a></td>
+                                  <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/triangle.svg" /></a></td>
+                                  <td></td>
+                                </tr>
+                                <tr>
+                                  <th scope="row">Mise en place de la solution OBarbeuc</th>
+                                  <td>12/11/2002</td>
+                                  <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/circle.svg" /></a></td>
+                                  <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/square.svg" /></a></td>
+                                  <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/heart.svg" /></a></td>
+                                  <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/star.svg" /></a></td>
+                                  <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/triangle.svg" /></a></td>
+                                  <td></td>
+                                </tr>
+                                <tr>
+                                  <th scope="row">Mise en place de la solution MarieTeam</th>
+                                  <td>12/11/2002</td>
+                                  <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/circle.svg" /></a></td>
+                                  <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/square.svg" /></a></td>
+                                  <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/heart.svg" /></a></td>
+                                  <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/star.svg" /></a></td>
+                                  <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/triangle.svg" /></a></td>
+                                  <td></td>
+                                </tr>
                               <tr>
                                 <td colspan="8" style="background-color: #EF2D40; color: white; font-weight: bold; text-align: center;">Réalisations en milieu professionnel en cours de Première Année</td>
                               </tr>
@@ -173,46 +243,6 @@
                                 <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/star.svg" /></a></td>
                                 <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/triangle.svg" /></a></td>
                                 <td></td>
-                              </tr>
-                              <tr>
-                                <th scope="row">Mise en place d'une Veille informationnelle sur ReactJs</th>
-                                <td>12/11/2002</td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/diamond.svg" /></a></td>
-                              </tr>
-                              <tr>
-                                <th scope="row">Entretien de mon compte Linkedin et de mes relations</th>
-                                <td>12/11/2002</td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/diamond.svg" /></a></td>
-                              </tr>
-                              <tr>
-                                <th scope="row">Mise en place de mon environnement d'apprentissage par la création de projet personnel</th>
-                                <td>12/11/2002</td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/diamond.svg" /></a></td>
-                              </tr>
-                              <tr>
-                                <th scope="row">Entretien de mon compte Github</th>
-                                <td>12/11/2002</td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/diamond.svg" /></a></td>
                               </tr>
                               <tr>
                                 <td colspan="8" style="background-color: #EF2D40; color: white; font-weight: bold; text-align: center;">Réalisations en milieu professionnel en cours de Seconde Année</td>
