[+] added more proof

--- a/e4.html
+++ b/e4.html
@@ -124,7 +124,7 @@
                                 <tr>
                                   <th scope="row">Création d'un Active Directory sous windows server 2016</th>
                                   <td>12/11/2002</td>
-                                  <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/circle.svg" /></a></td>
+                                  <td class="align_center"><a href="file\TP ACTIVE DIRECTORY.pdf" target="_blank" class="logo_e4"><img src="./img/circle.svg" /></a></td>
                                   <td></td>
                                   <td></td>
                                   <td></td>
@@ -144,7 +144,7 @@
                                 <tr>
                                   <th scope="row">Mise en place d'une répartition des charges sur serveurs web avec Haproxy</th>
                                   <td>12/11/2002</td>
-                                  <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/circle.svg" /></a></td>
+                                  <td class="align_center"><a href="file\haproxy.pdf" target="_blank" class="logo_e4"><img src="./img/circle.svg" /></a></td>
                                   <td></td>
                                   <td></td>
                                   <td></td>
@@ -154,7 +154,7 @@
                                 <tr>
                                   <th scope="row">Mise en place de sauvegardes et restauration système sur windows</th>
                                   <td>12/11/2002</td>
-                                  <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/circle.svg" /></a></td>
+                                  <td class="align_center"><a href="file\tp restauration sauvegarde.pdf" target="_blank" class="logo_e4"><img src="./img/circle.svg" /></a></td>
                                   <td></td>
                                   <td></td>
                                   <td></td>
@@ -164,12 +164,12 @@
                                 <tr>
                                   <th scope="row">Mise en place d'une Veille informationnelle sur ReactJs</th>
                                   <td>12/11/2002</td>
-                                  <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/circle.svg" /></a></td>
+                                  <td class="align_center"><a href="file\Veille Informationnelle.pdf" target="_blank" class="logo_e4"><img src="./img/circle.svg" /></a></td>
                                   <td></td>
                                   <td></td>
                                   <td></td>
                                   <td></td>
-                                  <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/diamond.svg" /></a></td>
+                                  <td class="align_center"><a href="file\Veille Informationnelle.pdf" target="_blank" class="logo_e4"><img src="./img/diamond.svg" /></a></td>
                                 </tr>
                                 <tr>
                                   <th scope="row">Entretien de mon compte Linkedin et de mes relations</th>
@@ -189,7 +189,7 @@
                                   <td></td>
                                   <td></td>
                                   <td></td>
-                                  <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/diamond.svg" /></a></td>
+                                  <td class="align_center"><a href="./file/Apprentissage par projets.pdf" target="_blank" class="logo_e4"><img src="./img/diamond.svg" /></a></td>
                                 </tr>
                                 <tr>
                                   <th scope="row">Entretien de mon compte Github</th>
@@ -199,7 +199,7 @@
                                   <td></td>
                                   <td></td>
                                   <td></td>
-                                  <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/diamond.svg" /></a></td>
+                                  <td class="align_center"><a href="./file/Entretien Github.pdf" target="_blank" class="logo_e4"><img src="./img/diamond.svg" /></a></td>
                                 </tr>
                                 <tr>
                                   <th scope="row">Mise en place de la solution PENC</th>
