[+] added linkedin file

--- a/e4.html
+++ b/e4.html
@@ -172,14 +172,14 @@
                                   <td class="align_center"><a href="file\Veille Informationnelle.pdf" target="_blank" class="logo_e4"><img src="./img/diamond.svg" /></a></td>
                                 </tr>
                                 <tr>
-                                  <th scope="row">Entretien de mon compte Linkedin et de mes relations</th>
+                                  <th scope="row">Entretien de mon compte Linkedin</th>
                                   <td>12/11/2002</td>
                                   <td></td>
                                   <td></td>
                                   <td></td>
                                   <td></td>
                                   <td></td>
-                                  <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/diamond.svg" /></a></td>
+                                  <td class="align_center"><a href="file\Entretien de mon LinkedIn.pdf" target="_blank" class="logo_e4"><img src="./img/diamond.svg" /></a></td>
                                 </tr>
                                 <tr>
                                   <th scope="row">Mise en place de mon environnement d'apprentissage par la création de projet personnel</th>
