--- a/e4.html
+++ b/e4.html
@@ -254,27 +254,7 @@
                                 <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/square.svg" /></a></td>
                                 <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/heart.svg" /></a></td>
                                 <td></td>
-                                <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/triangle.svg" /></a></td>
-                                <td></td>
-                              </tr>
-                              <tr>
-                                <th scope="row">Création d'une documentation du site et de sa fonctionnalité de création de devis</th>
-                                <td>Du 03/01/23 au 02/02/23</td>
-                                <td></td>
-                                <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/square.svg" /></a></td>
-                                <td></td>
-                                <td></td>
-                                <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/triangle.svg" /></a></td>
-                                <td></td>
-                              </tr>
-                              <tr>
-                                <th scope="row">Création de Test Unitaire de l'UI et des fonction serveurs</th>
-                                <td>Du 03/01/23 au 02/02/23</td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/triangle.svg" /></a></td>
+                                <td class="align_center"><a href="file\Déploiement du site JLM.pdf" target="_blank" class="logo_e4"><img src="./img/triangle.svg" /></a></td>
                                 <td></td>
                               </tr>
                               <tr>
@@ -282,8 +262,8 @@
                                 <td>Du 03/01/23 au 02/02/23</td>
                                 <td></td>
                                 <td></td>
-                                <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/heart.svg" /></a></td>
-                                <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/star.svg" /></a></td>
+                                <td class="align_center"><a href="file\Présence du site JLM.pdf" target="_blank" class="logo_e4"><img src="./img/heart.svg" /></a></td>
+                                <td class="align_center"><a href="file\Mode Projet Site Web.pdf" target="_blank" class="logo_e4"><img src="./img/star.svg" /></a></td>
                                 <td></td>
                                 <td></td>
                               </tr>
@@ -291,10 +271,10 @@
                                 <th scope="row">Création d'une API REST</th>
                                 <td>Du 03/01/23 au 02/02/23</td>
                                 <td></td>
-                                <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/square.svg" /></a></td>
-                                <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/heart.svg" /></a></td>
-                                <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/star.svg" /></a></td>
-                                <td></td>
+                                <td class="align_center"><a href="file\Incidents et Demandes Api JLM.pdf" target="_blank" class="logo_e4"><img src="./img/square.svg" /></a></td>
+                                <td class="align_center"></td>
+                                <td class="align_center"><a href="file\Mode projet API.pdf" target="_blank" class="logo_e4"><img src="./img/star.svg" /></a></td>
+                                <td class="align_center"><a href="file\Déploiement api jlm.pdf" target="_blank" class="logo_e4"><img src="./img/triangle.svg" /></a></td>
                                 <td></td>
                               </tr>
                             </tbody>
