--- a/e4.html
+++ b/e4.html
@@ -212,7 +212,7 @@
                                   <th scope="row">Mise en place de la solution OBarbeuc</th>
                                   <td>12/11/2002</td>
                                   <td class="align_center"><a href="file\Gestion du patrimoine Obarbeuc.pdf" target="_blank" class="logo_e4"><img src="./img/circle.svg" /></a></td>
-                                  <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/square.svg" /></a></td>
+                                  <td class="align_center"><a href="file\Gestion des demandes et incidents Obarbeuc.pdf" target="_blank" class="logo_e4"><img src="./img/square.svg" /></a></td>
                                   <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/heart.svg" /></a></td>
                                   <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/star.svg" /></a></td>
                                   <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/triangle.svg" /></a></td>
