[+] added test django

--- a/e4.html
+++ b/e4.html
@@ -215,7 +215,7 @@
                                   <td class="align_center"><a href="file\Gestion des demandes et incidents Obarbeuc.pdf" target="_blank" class="logo_e4"><img src="./img/square.svg" /></a></td>
                                   <td class="align_center"><a href="file\Développer la présence d’Obarbeuc.pdf" target="_blank" class="logo_e4"><img src="./img/heart.svg" /></a></td>
                                   <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/star.svg" /></a></td>
-                                  <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/triangle.svg" /></a></td>
+                                  <td class="align_center"><a href="file\Réalisation de Test Unitaire Django.pdf" target="_blank" class="logo_e4"><img src="./img/triangle.svg" /></a></td>
                                   <td></td>
                                 </tr>
                                 <tr>
