--- a/e4.html
+++ b/e4.html
@@ -199,22 +199,12 @@
                                   <td class="align_center"><a href="./file/Entretien Github.pdf" target="_blank" class="logo_e4"><img src="./img/diamond.svg" /></a></td>
                                 </tr>
                                 <tr>
-                                  <th scope="row">Mise en place de la solution PENC</th>
-                                  <td>12/11/2002</td>
-                                  <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/circle.svg" /></a></td>
-                                  <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/square.svg" /></a></td>
-                                  <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/heart.svg" /></a></td>
-                                  <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/star.svg" /></a></td>
-                                  <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/triangle.svg" /></a></td>
-                                  <td></td>
-                                </tr>
-                                <tr>
                                   <th scope="row">Mise en place de la solution OBarbeuc</th>
                                   <td>12/11/2002</td>
                                   <td class="align_center"><a href="file\Gestion du patrimoine Obarbeuc.pdf" target="_blank" class="logo_e4"><img src="./img/circle.svg" /></a></td>
                                   <td class="align_center"><a href="file\Gestion des demandes et incidents Obarbeuc.pdf" target="_blank" class="logo_e4"><img src="./img/square.svg" /></a></td>
                                   <td class="align_center"><a href="file\Développer la présence d’Obarbeuc.pdf" target="_blank" class="logo_e4"><img src="./img/heart.svg" /></a></td>
-                                  <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/star.svg" /></a></td>
+                                  <td class="align_center"><a href="file\Mode Projet Obarbeuc.pdf" target="_blank" class="logo_e4"><img src="./img/star.svg" /></a></td>
                                   <td class="align_center"><a href="file\Réalisation de Test Unitaire Django.pdf" target="_blank" class="logo_e4"><img src="./img/triangle.svg" /></a></td>
                                   <td></td>
                                 </tr>
@@ -235,10 +225,20 @@
                                 <th scope="row">Refonte d'un site web avec Wordpress</th>
                                 <td>Du 09/05/22 au 24/06/2022</td>
                                 <td></td>
-                                <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/square.svg" /></a></td>
+                                <td></td>
                                 <td></td>
                                 <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/star.svg" /></a></td>
-                                <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/triangle.svg" /></a></td>
+                                <td class="align_center"><a href="file\Mettre à disposition des Services FranceConnect.pdf" target="_blank" class="logo_e4"><img src="./img/triangle.svg" /></a></td>
+                                <td></td>
+                              </tr>
+                              <tr>
+                                <th scope="row">Mise en place d'un logiciel de ticketing : Jira</th>
+                                <td>Du 09/05/22 au 24/06/2022</td>
+                                <td></td>
+                                <td class="align_center"><a href="file\Incidents FranceConnect.pdf" target="_blank" class="logo_e4"><img src="./img/square.svg" /></a></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
                                 <td></td>
                               </tr>
                               <tr>
