--- a/e4.html
+++ b/e4.html
@@ -227,7 +227,7 @@
                                 <td></td>
                                 <td></td>
                                 <td></td>
-                                <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/star.svg" /></a></td>
+                                <td class="align_center"><a href="file\Travailler en Mode Projet FranceConnect.pdf" target="_blank" class="logo_e4"><img src="./img/star.svg" /></a></td>
                                 <td class="align_center"><a href="file\Mettre à disposition des Services FranceConnect.pdf" target="_blank" class="logo_e4"><img src="./img/triangle.svg" /></a></td>
                                 <td></td>
                               </tr>
