--- a/e4.html
+++ b/e4.html
@@ -211,7 +211,7 @@
                                 <tr>
                                   <th scope="row">Mise en place de la solution MarieTeam</th>
                                   <td>12/11/2002</td>
-                                  <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/circle.svg" /></a></td>
+                                  <td class="align_center"><a href="file\Patrimoine Informatique MarieTeam.pdf" target="_blank" class="logo_e4"><img src="./img/circle.svg" /></a></td>
                                   <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/square.svg" /></a></td>
                                   <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/heart.svg" /></a></td>
                                   <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/star.svg" /></a></td>
