--- a/e4.html
+++ b/e4.html
@@ -131,7 +131,7 @@
                                 <tr>
                                   <th scope="row">Création d'un serveur de messagerie sécurisé sous Ubuntu avec le client ThunderBird</th>
                                   <td>12/11/2002</td>
-                                  <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/circle.svg" /></a></td>
+                                  <td class="align_center"><a href="file\Création d’un serveur de messagerie sécurisé.pdf" target="_blank" class="logo_e4"><img src="./img/circle.svg" /></a></td>
                                   <td></td>
                                   <td></td>
                                   <td></td>
