--- a/e4.html
+++ b/e4.html
@@ -214,7 +214,7 @@
                                   <td class="align_center"><a href="file\Patrimoine Informatique MarieTeam.pdf" target="_blank" class="logo_e4"><img src="./img/circle.svg" /></a></td>
                                   <td class="align_center"><a href="file\Gestion des demandes et incidents MarieTeam.pdf" target="_blank" class="logo_e4"><img src="./img/square.svg" /></a></td>
                                   <td class="align_center"><a href="file\Développer la présence de MarieTeam.pdf" target="_blank" class="logo_e4"><img src="./img/heart.svg" /></a></td>
-                                  <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/star.svg" /></a></td>
+                                  <td class="align_center"><a href="file\Mode Projet MarieTeam.pdf" target="_blank" class="logo_e4"><img src="./img/star.svg" /></a></td>
                                   <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/triangle.svg" /></a></td>
                                   <td></td>
                                 </tr>
