--- a/e4.html
+++ b/e4.html
@@ -161,7 +161,7 @@
                                 <tr>
                                   <th scope="row">Mise en place d'une Veille informationnelle sur ReactJs</th>
                                   <td>X</td>
-                                  <td class="align_center"><a href="file\Veille Informationnelle.pdf" target="_blank" class="logo_e4"><img src="./img/circle.svg" /></a></td>
+                                  <td class="align_center"></td>
                                   <td></td>
                                   <td></td>
                                   <td></td>
