--- a/e4.html
+++ b/e4.html
@@ -255,7 +255,7 @@
                                 <td></td>
                               </tr>
                               <tr>
-                                <th scope="row">Refonte d'un site web avec ReactJS et Express (pour presence ajoutez avis google, google adsense et le seo dans le rapport de stage)</th>
+                                <th scope="row">Refonte d'un site web avec ReactJS et Express</th>
                                 <td>Du 03/01/23 au 10/02/23</td>
                                 <td></td>
                                 <td></td>
